Align switch with top of label and ensure that the label wraps

--- a/src/app/public/styles/_switch.scss
+++ b/src/app/public/styles/_switch.scss
@@ -3,7 +3,6 @@ $sky-switch-size: 22px !default;
 .sky-switch {
   cursor: pointer;
   display: inline-flex;
-  white-space: nowrap;
 
   &:hover .sky-switch-control {
     border-color: $sky-highlight-color-info;
@@ -60,6 +59,7 @@ $sky-switch-size: 22px !default;
   height: $sky-switch-size;
   flex: 1 0 $sky-switch-size;
   margin: auto;
+  margin-top: 0;
   margin-right: 5px;
   display: inline-flex;
   position: relative;
